cmake_minimum_required(VERSION 3.19.2)
cmake_policy(SET CMP0077 NEW)
project(Pluto)

set(CMAKE_CXX_STANDARD 14)
set(CMAKE_CXX_STANDARD_REQUIRED ON)



set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/lib)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/lib)
set(PROJECT_ROOT_PATH ${CMAKE_CURRENT_SOURCE_DIR})
set(PROJECT_BINARY_PATH ${PROJECT_BINARY_DIR})

include(${PROJECT_ROOT_PATH}/cmake/GenerateProtobufCPP.cmake)
set(PROTO_SRC_DIR ${CMAKE_CURRENT_SOURCE_DIR}/proto-src)
file(GLOB PB_H_FILES "${PROTO_SRC_DIR}/*.pb.h")
file(GLOB PB_CC_FILES "${PROTO_SRC_DIR}/*.pb.cc")

DELETE_OLD_GRPC_PB("${PB_H_FILES}")
DELETE_OLD_GRPC_PB("${PB_CC_FILES}")

set(GRPC_SRC_PATH /home/gaosm/Downloads/software/grpc)

ADD_SUBDIRECTORY(model model)
ADD_SUBDIRECTORY(utils utils)
ADD_SUBDIRECTORY(server server)

set(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)
