set(MODEL_GBM_SRCS LightGBMPredict.cc)
set(MODEL_GBM_HDRS LightGBMPredict.h)
set(lightgbm_so /usr/local/lib/lib_lightgbm.so)
set(CMAKE_INSTALL_PREFIX "${PROJECT_BINARY_DIR}")

ADD_LIBRARY(MODEL_GBM_STATIC STATIC ${MODEL_GBM_SRCS} ${MODEL_GBM_HRDS})
target_link_libraries(MODEL_GBM_STATIC ${lightgbm_so})
SET_TARGET_PROPERTIES(MODEL_GBM_STATIC PROPERTIES OUTPUT_NAME "MODEL_GBM")
SET_TARGET_PROPERTIES(MODEL_GBM_STATIC PROPERTIES CLEAN_DERECT_OUTPUT 1)

ADD_LIBRARY(MODEL_GBM_SHARED SHARED ${MODEL_GBM_SRCS} ${MODEL_GBM_HRDS})
target_link_libraries(MODEL_GBM_SHARED ${lightgbm_so})
SET_TARGET_PROPERTIES(MODEL_GBM_SHARED PROPERTIES OUTPUT_NAME "MODEL_GBM")
SET_TARGET_PROPERTIES(MODEL_GBM_SHARED PROPERTIES CLEAN_DERECT_OUTPUT 1)


install(TARGETS MODEL_GBM_STATIC MODEL_GBM_SHARED
        LIBRARY
        DESTINATION lib
        ARCHIVE
        DESTINATION lib
        )
install(FILES ${MODEL_GBM_HDRS} DESTINATION include)