set(LOGSRC PLog.cc)
set(LOGHDS PLog.h)
set(CMAKE_INSTALL_PREFIX ${PROJECT_BINARY_DIR})

ADD_LIBRARY(PLOG_STATIC STATIC ${LOGSRC} ${LOGHDS})
target_link_libraries(PLOG_STATIC log4cplus)
SET_TARGET_PROPERTIES(PLOG_STATIC PROPERTIES OUTPUT_NAME "PLog")
SET_TARGET_PROPERTIES(PLOG_STATIC PROPERTIES CLEAN_DERECT_OUTPUT 1)

ADD_LIBRARY(PLOG_SHARED SHARED ${LOGSRC} ${LOGHDS})
target_link_libraries(PLOG_SHARED log4cplus)
SET_TARGET_PROPERTIES(PLOG_SHARED PROPERTIES OUTPUT_NAME "PLog")
SET_TARGET_PROPERTIES(PLOG_SHARED PROPERTIES CLEAN_DERECT_OUTPUT 1)
set_target_properties(PLOG_SHARED PROPERTIES PUBLIC_HEADER ${PROJECT_BINARY_DIR}/include/PLog.h)

install(TARGETS PLOG_SHARED PLOG_STATIC
        LIBRARY
            DESTINATION lib
        ARCHIVE
            DESTINATION lib
        )
install(FILES PLOG_SHARED DESTINATION include)
#set_target_properties(ULOG_SHARED PROPERTIES PUBLIC_HEADER ${PROJECT_BINARY_DIR}/include/plog.h)