set(LOGSRC ULog.cc)
set(LOGHDS ULog.h)
set(CMAKE_INSTALL_PREFIX ${PROJECT_BINARY_DIR})

ADD_LIBRARY(ULOG_STATIC STATIC ${LOGSRC} ${LOGHDS})
target_link_libraries(ULOG_STATIC log4cplus)
SET_TARGET_PROPERTIES(ULOG_STATIC PROPERTIES OUTPUT_NAME "ULog")
SET_TARGET_PROPERTIES(ULOG_STATIC PROPERTIES CLEAN_DERECT_OUTPUT 1)

ADD_LIBRARY(ULOG_SHARED SHARED ${LOGSRC} ${LOGHDS})
target_link_libraries(ULOG_SHARED log4cplus)
SET_TARGET_PROPERTIES(ULOG_SHARED PROPERTIES OUTPUT_NAME "ULog")
SET_TARGET_PROPERTIES(ULOG_SHARED PROPERTIES CLEAN_DERECT_OUTPUT 1)
set_target_properties(ULOG_SHARED PROPERTIES PUBLIC_HEADER ${PROJECT_BINARY_DIR}/include/ULog.h)

install(TARGETS ULOG_SHARED ULOG_STATIC
        LIBRARY
            DESTINATION lib
        ARCHIVE
            DESTINATION lib
        )
install(FILES ULOG_SHARED DESTINATION include)
#set_target_properties(ULOG_SHARED PROPERTIES PUBLIC_HEADER ${PROJECT_BINARY_DIR}/include/ulog.h)